--- a/src/static/myqueries/myqueries-design.html
+++ b/src/static/myqueries/myqueries-design.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title></title>
-  <link href="myqueries.css" rel="stylesheet" />
+  <link href="myqueries.less" rel="stylesheet/less" />
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.4.0/less.js"></script>
 
   <script src="http://knockoutjs.com/downloads/knockout-3.2.0.debug.js"></script>
   <script src="myqueries.js"></script>
