--- a/src/static/tree/tree-design.html
+++ b/src/static/tree/tree-design.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title></title>
-  <script src="tree.js"></script>
   <script src="http://knockoutjs.com/downloads/knockout-3.2.0.debug.js"></script>
-  <link href="tree.css" rel="stylesheet" />
+
+  <link href="tree.less" rel="stylesheet/less" />
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.4.0/less.js"></script>
+
+  <script src="tree.js"></script>
+
   <style>
   html {
     font-family: 'DejaVu Sans', 'Verdana', sans;
