--- a/src/static/splitpanel/splitpanel-design.html
+++ b/src/static/splitpanel/splitpanel-design.html
@@ -2,21 +2,28 @@
 <html>
 <head>
   <title></title>
-  <script src="http://knockoutjs.com/downloads/knockout-3.2.0.debug.js"></script>
+  <script src="http://knockoutjs.com/downloads/knockout-3.3.0.debug.js"></script>
   <script src="splitpanel.js"></script>
   <link href="splitpanel.css" rel="stylesheet" />
 
   <style>
-  .box {
+  h-splitpanel {
+    display: block;
     width: 700px;
     height: 400px;
     margin: 3em auto;
   }
 
-  .splitpanel-left,
+  v-splitpanel {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+
+  .h-splitpanel__left,
   /*.splitpanel-right,*/
-  .splitpanel-top,
-  .splitpanel-bottom {
+  .v-splitpanel__top,
+  .v-splitpanel__bottom {
     background-color: #ccc;
     overflow: hidden;
     font-family: 'ubuntu';
@@ -64,8 +71,23 @@
   }
 
   </style>
+
+  <script>
+    var req = new XMLHttpRequest();
+    req.open('GET', 'splitpanel.template.html', false);
+    req.send();
+    document.write(req.responseText);
+  </script>
 </head>
 <body>
+
+  <h-splitpanel class="box">
+    <div data-bind="text: leftText"></div>
+    <v-splitpanel>
+      <div data-bind="text: topText"></div>
+      <iframe src="http://www.yr.no/place/Russia/Moscow/Moscow/avansert_meteogram.png"></iframe>
+    </v-splitpanel>
+  </h-splitpanel>
 
   <div class="box splitpanel">
     <div class="splitpanel-left" data-width="---" onresize="event.target.dataset.width = event.target.clientWidth">
@@ -109,7 +131,11 @@
     </div>
   </div>
 
-  <script>ko.applyBindings();</script>
+  <script>ko.applyBindings({
+    leftText: 'left panel',
+    topText: 'top panel',
+
+  });</script>
 
 </body>
 </html>
