--- a/src/static/jasmine.html
+++ b/src/static/jasmine.html
@@ -10,8 +10,14 @@
 
   <script src="http://knockoutjs.com/downloads/knockout-3.2.0.debug.js"></script>
 
+  <script src="nav/myqueries/myqueries.js"></script>
+  <script src="nav/myqueries/myqueries.spec.js"></script>
+
   <script src="nav/tree/tree.js"></script>
   <script src="nav/tree/tree.spec.js"></script>
+
+  <script src="nav/nav.js"></script>
+  <script src="nav/nav.spec.js"></script>
 </head>
 <body>
 
