--- a/src/static/nav/myqueries/myqueries-demo.html
+++ b/src/static/nav/myqueries/myqueries-demo.html
@@ -61,14 +61,15 @@
     storage.setItem('pgblackboard_query_1', 'some query');
     storage.setItem('pgblackboard_query_2', 'some awesome');
 
+    MyQueries.prototype._storage = storage;
+
     var currentQuery = ko.observable();
     var currentDoc = ko.observable();
 
     ko.applyBindings({
       isEditorFocused: ko.observable(false),
-      storage: storage,
       currentDoc: currentDoc,
-      selectedMyQuery: ko.observable(),
+      selectedItem: ko.observable(),
       blank: function () {
         var newDoc = ko.observable('');
         this.currentDoc(newDoc);
