--- a/src/static/splitpanel/splitpanel-demo.html
+++ b/src/static/splitpanel/splitpanel-demo.html
@@ -7,23 +7,23 @@
   <link href="splitpanel.css" rel="stylesheet" />
 
   <style>
-  h-splitpanel {
+  x-splitpanel-h {
     display: block;
     width: 700px;
     height: 400px;
     margin: 3em auto;
   }
 
-  v-splitpanel {
+  x-splitpanel-v {
     width: 100%;
     height: 100%;
     display: block;
   }
 
-  .h-splitpanel__left,
+  .splitpanel-h__left,
   /*.splitpanel-right,*/
-  .v-splitpanel__top,
-  .v-splitpanel__bottom {
+  .splitpanel-v__top,
+  .splitpanel-v__bottom {
     background-color: #ccc;
     overflow: hidden;
     font-family: 'ubuntu';
@@ -81,13 +81,13 @@
 </head>
 <body>
 
-  <h-splitpanel class="box">
+  <x-splitpanel-h class="box">
     <div data-bind="text: leftText"></div>
-    <v-splitpanel>
+    <x-splitpanel-v>
       <div data-bind="text: topText"></div>
       <iframe src="http://www.yr.no/place/Russia/Moscow/Moscow/avansert_meteogram.png"></iframe>
-    </v-splitpanel>
-  </h-splitpanel>
+    </x-splitpanel-v>
+  </x-splitpanel-h>
 
   <div class="box splitpanel">
     <div class="splitpanel-left" data-width="---" onresize="event.target.dataset.width = event.target.clientWidth">
