--- a/src/static/main/main.template.html
+++ b/src/static/main/main.template.html
@@ -13,7 +13,7 @@
 
     <x-splitpanel-v>
       <form target="output-iframe" method="POST" class="stretch">
-        <sql-editor params="doc: selectedDoc"></sql-editor>
+        <x-codeeditor params="doc: selectedDoc"></x-codeeditor>
       </form>
 
       <iframe name="output-iframe" class="stretch"></iframe>
