--- a/src/static/main/main.template.html
+++ b/src/static/main/main.template.html
@@ -32,7 +32,8 @@
               }"></form>
 
         <iframe class="main__output"
-                name="output-iframe"></iframe>
+                name="output-iframe"
+                data-bind="resetSrcBy: selectedDoc"></iframe>
 
       </div>
 
