--- a/src/static/main/main-demo.html
+++ b/src/static/main/main-demo.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="../favicon.ico"
+        rel="shortcut icon"
+        type="image/vnd.microsoft.icon" />
+
   <title></title>
   <script src="http://knockoutjs.com/downloads/knockout-3.3.0.debug.js"></script>
 
@@ -17,17 +21,17 @@
   <script src="main.js"></script>
   <script>loadTemplate('main.template.html')</script>
 
-	<link href="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/codemirror.css" rel="stylesheet" />
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/codemirror.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/search/searchcursor.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/keymap/sublime.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/edit/matchbrackets.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/edit/closebrackets.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/mode/sql/sql.js"></script>
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/codemirror.css" rel="stylesheet" />
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/codemirror.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/search/searchcursor.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/keymap/sublime.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/edit/matchbrackets.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/addon/edit/closebrackets.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/mode/sql/sql.js"></script>
 
-	<link href="../codeform/codeform.less" rel="stylesheet/less" />
-	<script src="../codeform/codeform.js"></script>
-	<script>loadTemplate('../codeform/codeform.template.html')</script>
+  <link href="../codeform/codeform.less" rel="stylesheet/less" />
+  <script src="../codeform/codeform.js"></script>
+  <script>loadTemplate('../codeform/codeform.template.html')</script>
 
   <link href="../nav/nav.less" rel="stylesheet/less" />
   <script src="../nav/nav.js"></script>
@@ -45,43 +49,246 @@
   <link href="../splitpanel/splitpanel.css" rel="stylesheet" />
   <script>loadTemplate('../splitpanel/splitpanel.template.html')</script>
 
+  <link href="../theme/light.css" rel="stylesheet" />
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.4.0/less.js"></script>
 
 </head>
 <body>
 
-	<!-- ko component: {
-		name: 'x-main',
-		params: $data
-	} --><!-- /ko -->
+  <!-- ko component: {
+  	name: 'main',
+  	params: $data
+  } --><!-- /ko -->
 
-	<script>
-	TreeNode.prototype.getDoc = function () {
-		var doc = ko.observable().extend({ codeEditorDoc: true });
-		setTimeout(function () {
-			doc(this.name);
-			doc.notifySubscribers(doc(), 'ready');
-		}.bind(this), 1000);
-		return doc;
-	};
+  <script>
+  TreeNode.prototype.getDoc = function () {
+    var doc = ko.observable().extend({ codeEditorDoc: true });
+    setTimeout(function () {
+      doc(this.name);
+      doc.notifySubscribers(doc(), 'ready');
+    }.bind(this), 1000);
+    return doc;
+  };
 
-	ko.applyBindings({
+  TreeNode.prototype.loadChildren = function (options) {
+    setTimeout(
+      options.success.bind(
+        this,
+        options.parent.children || []
+      ),
+      500
+    );
+  };
+
+  ko.applyBindings({
 		myQueriesStorage: window.sessionStorage,
-		databases: [
-			{
-				name: 'postgres',
-				database: 'postgres',
-				typ: 'database',
-			},
-			{
-				name: 'demo',
-				database: 'demo',
-				typ: 'database'
-			}
-		],
-		initialCode: 'demo'
-	});
-	</script>
+    databases: [
+      database('postgres', [
+        schema('information_schema', [
+
+        ]),
+        schema('pg_catalog', [
+        ]),
+        schema('public'),
+      ]),
+
+      database('database', [
+
+      ]),
+
+      schema('schema', [
+      ]),
+
+      extension('extension', [
+        table('table', [
+          pkcolumn('id : int'),
+          column('message : text'),
+          fkcolumn('foreign_id: int'),
+        ]),
+
+        func('function'),
+        agg('aggregate'),
+      ]),
+
+      table('table', [
+        pkcolumn('id : int'),
+        column('message : text'),
+        fkcolumn('foreign_id: int'),
+      ]),
+
+      view('view'),
+      matview('materialized view'),
+      foreigntable('foreign table'),
+
+      pkcolumn('primary key column'),
+      fkcolumn('foreign key column'),
+      column('regular column : type'),
+
+      index('index'),
+      trigger('trigger'),
+      foreignkey('foreignkey'),
+      check('check constraint'),
+      unique('unique constraint'),
+
+      func('function'),
+      agg('aggregate'),
+    ],
+    initialCode: 'demo'
+  });
+
+	function database(name, children) {
+    return {
+      name: name,
+      typ: 'database',
+      has_children: true,
+      children: children
+    };
+  }
+
+  function schema(name, children) {
+    return {
+      name: name,
+      typ: 'schema',
+      has_children: true,
+      children: children
+    };
+  }
+
+  function extension(name, children) {
+    return {
+      name: name,
+      typ: 'extension',
+      has_children: true,
+      children: children
+    };
+  }
+
+  function table(name, children) {
+    return {
+      name: name,
+      typ: 'table',
+      has_children: true,
+      children: children
+    };
+  }
+
+  function view(name, children) {
+    return {
+      name: name,
+      typ: 'view',
+      has_children: true,
+      children: children
+    };
+  }
+
+  function matview(name, children) {
+    return {
+      name: name,
+      typ: 'matview',
+      has_children: true,
+      children: children
+    };
+  }
+
+  function foreigntable(name, children) {
+    return {
+      name: name,
+      typ: 'foreigntable',
+      has_children: true,
+      children: children
+    };
+  }
+
+  function pkcolumn(name, children) {
+    return {
+      name: name,
+      typ: 'pkcolumn',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function fkcolumn(name, children) {
+    return {
+      name: name,
+      typ: 'fkcolumn',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function column(name, children) {
+    return {
+      name: name,
+      typ: 'column',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function index(name, children) {
+    return {
+      name: name,
+      typ: 'index',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function trigger(name, children) {
+    return {
+      name: name,
+      typ: 'trigger',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function foreignkey(name, children) {
+    return {
+      name: name,
+      typ: 'foreignkey',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function check(name, children) {
+    return {
+      name: name,
+      typ: 'check',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function unique(name, children) {
+    return {
+      name: name,
+      typ: 'unique',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function func(name, children) {
+    return {
+      name: name,
+      typ: 'func',
+      has_children: false,
+      children: children
+    };
+  }
+
+  function agg(name, children) {
+    return {
+      name: name,
+      typ: 'agg',
+      has_children: false,
+      children: children
+    };
+  }
+  </script>
 </body>
 </html>
