--- a/src/static/codeform/codeform.template.html
+++ b/src/static/codeform/codeform.template.html
@@ -12,7 +12,7 @@
     <div class="codeform__execbar">
       <button name="view"
               value="map"
-              class="btn-action"
+              class="codeform__exec-map"
               type="submit"
               title="alt-m"
               accesskey="m"
@@ -20,11 +20,11 @@
 
       <button name="view"
               value="table"
-              class="btn-action"
+              class="codeform__exec-table"
               type="submit"
               title="alt-x"
               accesskey="x"
-              ><b>execute</b></button>
+              >execute</button>
     </div>
 
     <div data-bind="css: { 'codeform__spinner--visible': isLoading }"
