--- a/src/static/output/table/table-demo.html
+++ b/src/static/output/table/table-demo.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title></title>
   <link href="table.css" rel="stylesheet" />
+  <script src="table.js" async="async"></script>
 </head>
 <body class="light">
 <div class="main scrollbox">
