--- a/src/static/index.html
+++ b/src/static/index.html
@@ -23,7 +23,7 @@
     </div>
   <!-- /ko -->
 
-  <script src="bundle.js"></script>
+  <script src="bundle-index.js"></script>
   <script>main(/*INITIAL_DATA_PLACEHOLDER*/);</script>
 
 </body>
